--- a/blog/templates/blog/blog_page.html
+++ b/blog/templates/blog/blog_page.html
@@ -82,29 +82,24 @@
 					<div class="sidebar-heding">
 						<h2>Recent Posts</h2>
 					</div>
-					<ul>
-						<li><a href="single-post.html">
-							<img src="img/recent_post_1.png" alt="Recent Post 1">
-							<div class="text">
-								<h6>Duis mollis orci</h6>
-								<span>15 September 2018</span>
-							</div>
-						</a></li>
-						<li><a href="single-post.html">
-							<img src="img/recent_post_2.png" alt="Recent Post 2">
-							<div class="text">
-								<h6>Etiam quis tem</h6>
-								<span>10 August 2018</span>
-							</div>
-						</a></li>
-						<li><a href="single-post.html">
-							<img src="img/recent_post_3.png" alt="Recent Post 3">
-							<div class="text">
-								<h6>Proin at augue</h6>
-								<span>16 July 2018</span>
-							</div>
-						</a></li>
-					</ul>
+				                    <ul>
+                        {% if blogs %}
+                            {% for post in blogs %}
+                                {% if post.feed_image %}
+                                <li><a href="{{ post.url }}">
+                                    {% image post.feed_image fill-60x60 as feed_image %}
+                                    <img src="{{ feed_image.url }}" alt="{{ post.title }}">
+                                {% endif %}
+                                <div class="text">
+                                    <h6>{{ post.title }}</h6>
+                                    <span>{{ post.date }}</span>
+                                </div>
+                                </a></li>
+                            {% endfor %}
+                        {% else %}
+                            <p>No recent posts available.</p>
+                        {% endif %}
+                    </ul>
 				</div>
 				<div class="categories">
 					<div class="sidebar-heding">
