--- a/blog/templates/blog/includes/blog_body.html
+++ b/blog/templates/blog/includes/blog_body.html
@@ -2,7 +2,6 @@
 
 {% if body %}
   	{% for block in body %}
-  		<p>-{{ block.block_type }} </p>
       	{% include_block block %}
   	{% endfor %}
-s{% endif %}
+{% endif %}
