--- a/blog/templates/blog/includes/blog_header.html
+++ b/blog/templates/blog/includes/blog_header.html
@@ -1,7 +1,4 @@
 {% load wagtailcore_tags %}
 
-<div class="text-content">
-	<h2 class="article-title">{{ self.title }}</h2>
+	<h1>{{ self.title }}</h1>
 		<span><a href="#">{{ self.owner.first_name }} {{ self.owner.last_name }}</a> / <a href="#">{{ self.date }}</a> / <a href="#">Branding</a></span>
-	</div>
-</div>
