--- a/pages/static/home/css/templatemo-style.css
+++ b/pages/static/home/css/templatemo-style.css
@@ -29,7 +29,7 @@ html {
     text-align: center;
 }
 
-.page-heading .heading-content h1 {
+.page-heading .heading-content h2 {
     font-size: 32px;
     text-transform: uppercase;
     color: #fff;
@@ -1079,9 +1079,18 @@ footer a:hover {
     text-decoration: none;
 }
 
-.single-blog-post .text-content h2 {
+.single-blog-post .text-content h1 {
     margin-top: 0px;
     font-size: 36px;
+    color: #fff;
+    letter-spacing: 0.5px;
+    text-transform: capitalize;
+    font-weight: 300;
+}
+
+.single-blog-post .text-content h2 {
+    margin-top: 15px;
+    font-size: 24px;
     color: #fff;
     letter-spacing: 0.5px;
     text-transform: capitalize;
