--- a/static/home/css/templatemo-style.css
+++ b/static/home/css/templatemo-style.css
@@ -970,9 +970,10 @@ footer a:hover {
     text-decoration: none;
 }
 
+
 .blog-post .text-content h2 {
     margin-top: 5px;
-    font-size: 36px;
+    font-size: 24px;
     color: #fff;
     letter-spacing: 0.5px;
     text-transform: capitalize;
@@ -1079,8 +1080,17 @@ footer a:hover {
     text-decoration: none;
 }
 
-.single-blog-post .text-content h2 {
-    margin-top: 0px;
+.single-blog-post .text-content h1 {
+    margin-top: 5px;
+    font-size: 36px;
+    color: #fff;
+    letter-spacing: 0.5px;
+    text-transform: capitalize;
+    font-weight: 300;
+}
+
+.single-blog-post .text-content. h2 {
+    margin-top: 10px;
     font-size: 36px;
     color: #fff;
     letter-spacing: 0.5px;
