--- a/blog/templates/blog/blog_index_page.html
+++ b/blog/templates/blog/blog_index_page.html
@@ -7,7 +7,9 @@
 <div class="page-heading">
     <div class="container">
         <div class="heading-content">
-            <h2>Our <em>Blog</em></h2>
+            <h2>Our <em>{{ page.title }}</em></h2>
+                      <h2>{{ page.title }}</h2>
+
         </div>
     </div>
 </div>
