--- a/pages/templates/base2.html
+++ b/pages/templates/base2.html
@@ -35,9 +35,9 @@
   {% if request.in_preview_panel %}
       <base target="_blank">
   {% endif %}
-...
 </head>
 
+    {% include 'lang.html' %}
 
 <body>
 
