--- a/blog/templates/blog/includes/blog_header.html
+++ b/blog/templates/blog/includes/blog_header.html
@@ -1,4 +1,4 @@
 {% load wagtailcore_tags %}
 
-	<h1>{{ self.title }}</h1>
+	<h1>{{ page.title }}</h1>
 		<span><a href="#">{{ self.owner.first_name }} {{ self.owner.last_name }}</a> / <a href="#">{{ self.date }}</a> / <a href="#">Branding</a></span>
