--- a/pages/templates/navigation.html
+++ b/pages/templates/navigation.html
@@ -1,3 +1,5 @@
+{% load navigation_tags %}
+
 {% load static i18n %}
 
 
@@ -14,13 +16,22 @@
     <div class="container">
         <div class="row">
             <div class="main-menu">
+               <ul class="navigation__items nav-pills">
+                    {# main_menu is defined in base/templatetags/navigation_tags.py #}
+                    {% get_site_root as site_root %}
+                    {% top_menu parent=site_root calling_page=self %}
+                </ul>
                 <ul>
                     {% for child_page in root_page.get_children.live %}
                         <li><a href="{{ child_page.url }}">{{ child_page.title }}</a></li>
                     {% endfor %}
-                </ul>                
+                </ul>
+                      <ul>
+                                </ul>
                 <p>{% trans "Your smile, our priority. Affordable dental care abroad." %}</p>
             </div>
         </div>
     </div>
 </section>
+
+
