updatedd trans sstm

--- a/blog/templates/blog/blog_index_page.html
+++ b/blog/templates/blog/blog_index_page.html
@@ -7,9 +7,7 @@
 <div class="page-heading">
     <div class="container">
         <div class="heading-content">
-            <h2>Our <em>{{ page.title }}</em></h2>
-                      <h2>{{ page.title }}</h2>
-
+            <h2> {{ page.title }}</h2>
         </div>
     </div>
 </div>
@@ -128,19 +126,14 @@
                             <h2>Latest Gallery</h2>
                         </div>
                         <ul>
-                            <li><a href="#"></a><img src="img/latest_gallery_1.png" alt=""></li>
-                            <li><a href="#"></a><img src="img/latest_gallery_2.png" alt=""></li>
-                            <li><a href="#"></a><img src="img/latest_gallery_3.png" alt=""></li>
-                            <li><a href="#"></a><img src="img/latest_gallery_4.png" alt=""></li>
-                            <li><a href="#"></a><img src="img/latest_gallery_5.png" alt=""></li>
-                            <li><a href="#"></a><img src="img/latest_gallery_6.png" alt=""></li>
-                            <li><a href="#"></a><img src="img/latest_gallery_7.png" alt=""></li>
-                            <li><a href="#"></a><img src="img/latest_gallery_8.png" alt=""></li>
                         </ul>
                     </div>
                 </div>
             </div>
         </div> <!-- End row -->
     </div> <!-- End container -->
-</div> <!-- End b
-{% endblock %}
+</div> 
+
+{% endblock content %}
+{% block javascripts %}
+{% endblock javascripts %}
